--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static Template</title>
+    <title>this is my first page</title>
   </head>
   <body>
     <h1>This is my heading</h1>
-    <p>Commit new changes</p>
+    <nav>
+      <a href="page1.html">go to page 1</a>
+      <a href="page2.html">go to page 2</a>
+    </nav>
+    <p>Lorem ipsum <mark>dolor</mark> sit amet,
+     <b>consectetur</b> <i>adipiscing</i> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa tempor nec feugiat nisl pretium fusce id. Ut venenatis tellus in metus vulputate. Sed ullamcorper morbi tincidunt ornare massa. Neque volutpat ac tincidunt vitae semper quis lectus nulla at. Gravida quis blandit turpis cursus in hac habitasse platea dictumst. Nisi vitae suscipit tellus mauris. Diam quis enim lobortis scelerisque fermentum dui. Facilisis magna etiam tempor orci eu. Pellentesque pulvinar pellentesque habitant morbi. Orci eu lobortis elementum nibh tellus molestie nunc. Sit amet mattis vulputate enim. Quis hendrerit dolor magna eget est lorem ipsum dolor.</p>
+    
+    <h2>TO DO List</h2>
+    <ul>
+      <li>this is the first item</li>
+      <li>this is <br>the second item</li>
+      <li>this is the third item</li>
+      <ol style="list-style-type:lower-alpha">
+        <li>three a</li>
+        <li>three b</li>
+        <li>three c</li>
+      </ol>
+      <li>this is the fourth item</li>
+    </ul>
+    <table style="width:100%;border:2px">
+    <tbody>
+    <tr>
+      <th colspan="3">HEADER</th>
+    </tr>
+    <tr>
+      <td>one</td>
+      <td>two</td>
+      <td>three</td>
+    </tr>
+    </tbody>
+    </table>
+    <div>
+      <p>Text for</p>
+      <p>another text</p>
+    </div>
+
+<header style="border: 1px solid black">page heading</header>
+    <!--<div id="pageHeading">Page heading</div>-->
+    <nav style="border: 1px solid black">links</nav>
+    <!--<div id="navigation">navigation</div>-->
+    <main>page contents</main>
+    <!--<div id="main">page contents</div>-->
+    
+    <!--<div id="footer">footer</div>-->
+<footer>copyright</footer>
+
+    </table>
   </body>
 </html>
