new functions aok

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>this is my first page</title>
+    <title>UEFA</title>
   </head>
   <body>
-    <h1>This is my heading</h1>
+    <h1>UEFA Champions League</h1>
     <nav>
-      <a href="page1.html">go to page 1</a>
-      <a href="page2.html">go to page 2</a>
+      <a href="pages/page1.html"></a>
+      <a href="pages/page2.html">go to page 2</a>
     </nav>
     <p>Lorem ipsum <mark>dolor</mark> sit amet,
      <b>consectetur</b> <i>adipiscing</i> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa tempor nec feugiat nisl pretium fusce id. Ut venenatis tellus in metus vulputate. Sed ullamcorper morbi tincidunt ornare massa. Neque volutpat ac tincidunt vitae semper quis lectus nulla at. Gravida quis blandit turpis cursus in hac habitasse platea dictumst. Nisi vitae suscipit tellus mauris. Diam quis enim lobortis scelerisque fermentum dui. Facilisis magna etiam tempor orci eu. Pellentesque pulvinar pellentesque habitant morbi. Orci eu lobortis elementum nibh tellus molestie nunc. Sit amet mattis vulputate enim. Quis hendrerit dolor magna eget est lorem ipsum dolor.</p>
@@ -24,15 +24,15 @@
       </ol>
       <li>this is the fourth item</li>
     </ul>
-    <table style="width:100%;border:2px">
+    <table style="width:100%;border:2px solid">
     <tbody>
     <tr>
-      <th colspan="3">HEADER</th>
+      <th colspan="3">List of items</th>
     </tr>
     <tr>
-      <td>one</td>
-      <td>two</td>
-      <td>three</td>
+      <td>Col one</td>
+      <td>Col two</td>
+      <td>Col three</td>
     </tr>
     </tbody>
     </table>
